# judgebench

./: .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt
data/context_understanding/: dataset.json
methods/MultiAgentEvaluation/: main.py  utils.py
methods/PromptEvaluation/: main.py  utils.py
scripts/: ar.sh  cot.sh  io.sh  mab.sh  mad.sh  sc.sh
src/: __init__.py
src/methods/: base_evaluator.py  multi_agent_eval.py  prompt_eval.py
src/utils/: metrics.py  prompts.py  schemas.py
utils/: model_config.py  scores.py
