[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[project]
name = "judgebench"
version = "0.1.0"
description = "Benchmarking Contextual Understanding for In-Car Conversational Systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-ml>=1.30.0",
    "fastapi>=0.128.0",
    "json-repair>=0.54.3",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langsmith>=0.5.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=0.19.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
